# shray2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTORS.md  LICENSE.md  Makefile  README  README.md  SCALAPACK_install.txt  SHRAYmake.inc  atlas4000.out  build.sh  build.txt  build_csmpi.sh  cage3.mtx_column1  cage3.mtx_column2  cage3.mtx_info1  cage3.mtx_info4  cage3.mtx_values1  cage3.mtx_values2  cage3.mtx_values3  config.mk  debug.txt  fixme.txt  make_graph.sh  matrix.trace  mpich.sh  nbodyFortran.asm  ompi.sh  reproduce.sh  shray.aux  shray.tex  stencil.out!  temp.txt  todo.txt
apps/: 1dstencil.c  1dstencil_shray.c  2dstencil.c  atlas.c  blas.c  hello.c  matrix.f90  nbody.c  nbody.f90  nbodyLoadbalance.c  polyhedral.c  reduction.c  stencil.c  threadedReduction.c  vector.c
apps/oshmem/: nbody.c
apps/oshmem/oshmem/: Makefile
apps/oshmem/oshmem/apps/: matrix.c  nbody.c  stencil.c
benchmark/: CMakeLists.txt  Makefile
benchmark/gasnet/: CMakeLists.txt  large.c  small.c
benchmark/seq/: CMakeLists.txt  bandwidth.c  free.c  latency.c  mprotect.c  remap.c  segv.c
benchmark/shmem/: large.c  small.c
benchmark/shray/: large.c  small.c
cmake/: CMakeChapelCompiler.cmake.in  CMakeChapelInformation.cmake  CMakeDetermineChapelCompiler.cmake  CMakeDetermineUPCCompiler.cmake  CMakeTestChapelCompiler.cmake  CMakeTestUPCCompiler.cmake  CMakeUPCCompiler.cmake.in  CMakeUPCInformation.cmake  FindGASNet.cmake  FindGlobalArrays.cmake  config.cmake.in  gasnet.cmake  language_standard.cmake  sanitise.cmake  src.cmake  version.h.in  version_header.cmake
csr_parser/: Makefile  README.txt  cage3.mtx  mm_to_csr.c  parser  parser.sh
docs/: shray.tex
examples/: 1dstencilThomas.c  1dstencil_shray.c  2dstencil.c  2dstencilAuto.c  CMakeLists.txt  STREAM_triad.c  bandwidth.c  blas.c  gmres.sac  hello.c  matrix.c  nbody.c  nbodyLoadbalance.c  nbodyUnblocked.c  polyhedral.c  random.c  reduce.c  segfault.c  sync.c  vector.c
examples/chapel/: 1dstencil.chpl  1dstencil_combi.chpl  2dstencil.chpl  CMakeLists.txt  cg-sparse  cg-sparse.chpl  cg.chpl  hello.chpl  matrix.chpl  matrix2.chpl  matrix_combi.chpl  monopoly.chpl  monopoly_combi.chpl  nbody.chpl  spmv.chpl  spmv_combi.chpl  test.chpl
examples/fortran/: 1dstencil.f90  1dstencil_mt.f90  2dstencil.f90  CMakeLists.txt  blas.f90  cg.f90  cg_single.f90  cgm.f90  dist_module.f90  matrix.f90  matrix_mt.f90  minimal.f90  mmio.f90  monopoly.f90  monopoly_mt.f90  nbody.f90  nbodyUnblocked.f90  random.f90  spmv.f90  spmvParallel.f90  stencil.f90
examples/fortran/modules/: mmio.f90
examples/gasnet/: CMakeLists.txt  barrier.c  reduce.c  segfault.c
examples/globalarrays/: 1dstencil.c  1dstencil_mt.c  CMakeLists.txt  cg.c  hello.c  matrix.c  monopoly.c  monopoly_mt.c  nbody.c  random.c  spmv.c
examples/mpi/: CMakeLists.txt  bandwidth.c  matrix.c  matrix_nb.c  segfault.c
examples/omp/: CMakeLists.txt  cg.c  cg_comp.c  cg_omp.f90
examples/oshmem/: 2dstencil.c  CMakeLists.txt  hello.c  matrix.c  matrixOpt.c  nbody.c  nbodyOpt.c  nbodyUnblocked.c  random.c
examples/scalapack/: Makefile  README.txt  SLmake.inc  pdblas1tim.f  pdblas2tim.f  pdblas3tim.f  pdtrord.f  scalapatch.sh
examples/shray/: 1dstencil.c  1dstencil_mt.c  2dstencil.c  2dstencilAuto.c  CMakeLists.txt  bandwidth.c  broadcast.c  cg.c  gasnet.c  matrix.c  matrixAuto.c  matrix_mt.c  monopoly.c  monopoly_mt.c  nbody.c  nbodyAuto.c  nbody_mt.c  norm.c  random.c  reduce.c  segfault.c  segfault_prefetch.c  spmv.c  spmv_mt.c  sync.c  synctest.c
examples/upc/: 1dstencil.upc  CMakeLists.txt  cg.upc  hello.upc  matrix.c  matrix.upc  monopoly.upc  ownerComputes.upc  spmv.c  spmv.upc
examples/util/: CMakeLists.txt  csr.c  csr.h  host.c  host.h  makea.c  time.h
experiments/: .gitignore  bandwidth.sh  benchmark.sh  benchmarkJob.sh  benchmark_gflops.gpi  benchmark_gflops_cg_s.gpi  benchmark_gflops_cg_shray.gpi  benchmark_gflops_dgemm.gpi  benchmark_run.sh  benchmark_time.gpi  calc.py  cg_dist.sh  matrix.sh  microbenchmark.sh  reduce.sh  reduce.sh.template  scalapack_generator.sh  segfault_time.gpi  sync.sh  sync.sh.template  systeminfo.sh
include/: shray.h  shrayInternal.h  utils.h
include/shray2/: .shray.h.swo  shray.h  shrayInternal.h
old/: reduction.c  threadedReduction.c
ompi/: .gitignore  Makefile  README.md  minimal.c
src/: CMakeLists.txt  bitmap.c  bitmap.h  debug.h  queue.c  queue.h  ringbuffer.c  ringbuffer.h  shray.c  shray.c.in  shray.h  utils.c
tests/: CMakeLists.txt  Makefile  bitmap  bitmap.c  intrinsics.c
